<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.developer.allef.androidmodelviewpresenter.View.MainActivity">

    <android.support.design.widget.TextInputLayout

        android:id="@+id/labellogin"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/colorAccent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txtlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvtitulo"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/hintlogin"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout

        android:id="@+id/labesenha"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/colorAccent"
        android:layout_height="wrap_content"
         android:layout_below="@+id/labellogin">

        <EditText
            android:id="@+id/txtsenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvtitulo"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/hintsenha"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:id="@+id/btnlogar"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labesenha"
        android:layout_marginTop="20dp"
        android:text="Sing In"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/btnlogar"
        android:text="Não tem uma conta ? Cadastre-se !"
        android:layout_height="wrap_content" />

</RelativeLayout>
